--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,7 @@
   <%= render 'layouts/footer' %>
   <%= debug(params) if Rails.env.development? %>
 </div>
+<a href="http://www.me.cc/?r=realfengjia">Free .me.cc domains</a>
+<a href="http://cplib.me.cc">Crowne Plaza Library</a>
 </body>
 </html>
