--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,12 +2,12 @@
     <div class="row">
       <aside class="span3">
         <section>
-          <%= render 'shared/borrow_form' %>
+          <%= render 'borrowing_records/borrow_form' %>
         </section>
       </aside>
       <div class="span9">
         <section>
-          <%= render 'shared/current_record' %>
+          <%= render 'borrowing_records/current_record' %>
         </section>
       </div>
     </div>
