adjust paginate amount & remove readers and bookers title

--- a/app/views/readers/index.html.erb
+++ b/app/views/readers/index.html.erb
@@ -1,5 +1,4 @@
-<% provide(:title, 'All readers') %>
-<h1>All readers</h1>
+<% provide(:title, 'All Readers') %>
 
 <%= link_to "Register New Reader", new_reader_path,
             class: "btn btn-large btn-primary" %>
