--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,4 @@
-<% provide(:title, 'All books') %>
-<h1>All books</h1>
+<% provide(:title, 'All Books') %>
 
 <%= link_to "Add New Book", new_book_path,
             class: "btn btn-large btn-primary" %>
