update book and reader title

--- a/app/views/readers/edit.html.erb
+++ b/app/views/readers/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit reader") %>
-<h1>Update reader profile</h1>
+<h1>Update Reader Profile</h1>
 
 <div class="row">
   <div class="span6 offset3">
