--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit book") %>
-<h1>Update book info</h1>
+<h1>Update Book Information</h1>
 
 <div class="row">
   <div class="span6 offset3">
