add borrowing records for reader show page

--- a/app/views/readers/show.html.erb
+++ b/app/views/readers/show.html.erb
@@ -21,6 +21,6 @@
     </section>
   </aside>
   <div class="span8">
-    Borrowing Record will be Here...
+    <%= render 'borrowing_records/reader_records' %>
   </div>
 </div>
