--- a/app/views/borrowing_records/_borrowing_record.html.erb
+++ b/app/views/borrowing_records/_borrowing_record.html.erb
@@ -1,15 +1,23 @@
 <tr id="<%= borrowing_record.id %>">
-  <td><%= link_to borrowing_record.book.name, borrowing_record.book %></td>
-  <td><%= link_to borrowing_record.reader.name, borrowing_record.reader %></td>
-  <% if borrowing_record.created_at.time.months_since(1).past? %>
-      <td class="borrowed">
-        <%= time_ago_in_words(borrowing_record.created_at) %> ago
+  <% unless @book_page %>
+      <td><%= link_to borrowing_record.book.name, borrowing_record.book %></td>
+  <% end %>
+  <% unless @reader_page %>
+      <td><%= link_to borrowing_record.reader.name, borrowing_record.reader %></td>
+  <% end %>
+  <% if @current and borrowing_record.created_at.time.months_since(1).past? %>
+      <td class="overdue">
+        <%= borrowing_record.created_at.strftime('%Y-%m-%d') %>
       </td>
   <% else %>
       <td>
-        <%= time_ago_in_words(borrowing_record.created_at) %> ago
+        <%= borrowing_record.created_at.strftime('%Y-%m-%d') %>
       </td>
   <% end %>
-  <td><%= link_to "Return", borrowing_record, method: :put,
-                  data: {confirm: "You sure?"}, class: "btn btn-danger" %></td>
+  <% if borrowing_record.current %>
+      <td><%= link_to "Return", borrowing_record, method: :put,
+                      data: {confirm: "You sure?"}, class: "btn btn-danger" %></td>
+  <% else %>
+      <td><%= borrowing_record.updated_at.strftime('%Y-%m-%d') %></td>
+  <% end %>
 </tr>
