--- a/app/views/borrowing_records/_current_records.html.erb
+++ b/app/views/borrowing_records/_current_records.html.erb
@@ -1,4 +1,5 @@
 <% if @borrowing_records.any? %>
+    <% @current = true %>
     <%= will_paginate @borrowing_records %>
 
     <table class="table-bordered table-striped">
