add borrowing record to book show page

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,6 +33,6 @@
     </section>
   </aside>
   <div class="span8">
-    Borrowing Record will be Here...
+    <%= render 'borrowing_records/book_records' %>
   </div>
 </div>
