fix table header typo

--- a/app/views/borrowing_records/_book_records.html.erb
+++ b/app/views/borrowing_records/_book_records.html.erb
@@ -6,8 +6,8 @@
       <thead>
       <tr>
         <th class="span3">Reader</th>
-        <th class="span3">Borrow Time</th>
-        <th class="span3">Return Time</th>
+        <th class="span3">Borrow Date</th>
+        <th class="span3">Return Date</th>
       </tr>
       </thead>
       <tbody>
