--- a/app/views/borrowing_records/_current_records.html.erb
+++ b/app/views/borrowing_records/_current_records.html.erb
@@ -7,7 +7,7 @@
       <tr>
         <th class="span3">Book</th>
         <th class="span3">Reader</th>
-        <th class="span2">Status</th>
+        <th class="span2">Date</th>
         <th class="span1">Return</th>
       </tr>
       </thead>
